--- a/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/dialogue_augmentation.ipynb
+++ b/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/dialogue_augmentation.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -39,8 +40,9 @@
    ],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\"\n",
-    "os.getenv('EMBEDDER_MODEL')"
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\"\n",
+    "os.getenv(\"EMBEDDER_MODEL\")"
    ]
   },
   {
@@ -58,7 +60,7 @@
     }
    ],
    "source": [
-    "from dialogue2graph.pipelines.core.dialogue import DialogueMessage, Dialogue\n",
+    "from dialogue2graph.pipelines.core.dialogue import DialogueMessage\n",
     "from pydantic import BaseModel\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.prompts import PromptTemplate\n",
@@ -66,7 +68,6 @@
     "from typing import List\n",
     "from tqdm import tqdm\n",
     "import pickle\n",
-    "import numpy as np\n",
     "from augmentation_prompts import naive_augmentation_prompt"
    ]
   },
@@ -96,14 +97,16 @@
    "source": [
     "augmentation_prompt = PromptTemplate.from_template(naive_augmentation_prompt)\n",
     "\n",
+    "\n",
     "class DialogueSequence(BaseModel):\n",
     "    result: List[DialogueMessage]\n",
     "\n",
+    "\n",
     "model = ChatOpenAI(\n",
-    "    model=\"gpt-4o-mini\", \n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"), \n",
-    "    base_url=os.getenv(\"OPENAI_BASE_URL\"), \n",
-    "    temperature=0.7\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0.7,\n",
     ")\n",
     "\n",
     "parser = JsonOutputParser(pydantic_object=DialogueSequence)\n",
@@ -2409,26 +2412,20 @@
    "source": [
     "new_data = []\n",
     "\n",
-    "for i, example in enumerate(dataset['train']):\n",
-    "    print(f'Augmenting example {i}:')\n",
-    "    topic = example['topic']\n",
-    "    all_dialogues = example['dialogues']\n",
+    "for i, example in enumerate(dataset[\"train\"]):\n",
+    "    print(f\"Augmenting example {i}:\")\n",
+    "    topic = example[\"topic\"]\n",
+    "    all_dialogues = example[\"dialogues\"]\n",
     "\n",
-    "    example['augmented_dialogues'] = []\n",
+    "    example[\"augmented_dialogues\"] = []\n",
     "\n",
     "    for element in tqdm(all_dialogues, total=len(all_dialogues)):\n",
-    "        orig_dialogue = element['messages']        \n",
-    "        aug_dialogue = chain.invoke({\n",
-    "            \"topic\": topic,\n",
-    "            \"dialogue\": orig_dialogue\n",
-    "        })\n",
-    "        example['augmented_dialogues'].append(\n",
-    "            {\n",
-    "                'id' : element['id'],\n",
-    "                'messages' : aug_dialogue\n",
-    "                }\n",
-    "            )\n",
-    "        \n",
+    "        orig_dialogue = element[\"messages\"]\n",
+    "        aug_dialogue = chain.invoke({\"topic\": topic, \"dialogue\": orig_dialogue})\n",
+    "        example[\"augmented_dialogues\"].append(\n",
+    "            {\"id\": element[\"id\"], \"messages\": aug_dialogue}\n",
+    "        )\n",
+    "\n",
     "    new_data.append(example)\n",
     "    with open(\"../data/gen_dataset_augment_naive\", \"wb\") as fp:\n",
     "        pickle.dump(new_data, fp)"
@@ -2458,14 +2455,16 @@
    "source": [
     "augmentation_prompt = PromptTemplate.from_template(one_shot_augmentation_prompt)\n",
     "\n",
+    "\n",
     "class DialogueSequence(BaseModel):\n",
     "    result: List[DialogueMessage]\n",
     "\n",
+    "\n",
     "model = ChatOpenAI(\n",
-    "    model=\"gpt-4o-mini\", \n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"), \n",
-    "    base_url=os.getenv(\"OPENAI_BASE_URL\"), \n",
-    "    temperature=0.7\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0.7,\n",
     ")\n",
     "\n",
     "parser = JsonOutputParser(pydantic_object=DialogueSequence)\n",
@@ -2510,37 +2509,31 @@
    "source": [
     "new_data = []\n",
     "\n",
-    "for i, example in enumerate(dataset['train']):\n",
+    "for i, example in enumerate(dataset[\"train\"]):\n",
     "    if i == 0 or i == 1:\n",
     "        continue\n",
     "\n",
-    "    print(f'Augmenting example {i}:')\n",
-    "    topic = example['topic']\n",
-    "    all_dialogues = example['dialogues']\n",
+    "    print(f\"Augmenting example {i}:\")\n",
+    "    topic = example[\"topic\"]\n",
+    "    all_dialogues = example[\"dialogues\"]\n",
     "\n",
-    "    example['augmented_dialogues'] = []\n",
+    "    example[\"augmented_dialogues\"] = []\n",
     "\n",
     "    for element in tqdm(all_dialogues, total=len(all_dialogues)):\n",
     "        try:\n",
-    "            orig_dialogue = element['messages']        \n",
-    "            aug_dialogue = chain.invoke({\n",
-    "                \"topic\": topic,\n",
-    "                \"dialogue\": orig_dialogue\n",
-    "            })\n",
+    "            orig_dialogue = element[\"messages\"]\n",
+    "            aug_dialogue = chain.invoke({\"topic\": topic, \"dialogue\": orig_dialogue})\n",
     "        except Exception as e:\n",
     "            aug_dialogue = e\n",
-    "        \n",
-    "        example['augmented_dialogues'].append(\n",
-    "                {\n",
-    "                    'id' : element['id'],\n",
-    "                    'messages' : aug_dialogue\n",
-    "                    }\n",
-    "                )\n",
-    "                    \n",
+    "\n",
+    "        example[\"augmented_dialogues\"].append(\n",
+    "            {\"id\": element[\"id\"], \"messages\": aug_dialogue}\n",
+    "        )\n",
+    "\n",
     "    new_data.append(example)\n",
     "    with open(\"../data/gen_dataset_augment_one-shot_2\", \"wb\") as fp:\n",
     "        pickle.dump(new_data, fp)\n",
-    "    \n",
+    "\n",
     "    if i == 3:\n",
     "        break"
    ]
