--- a/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/dialogue_augmentation_check.ipynb
+++ b/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/dialogue_augmentation_check.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -39,8 +40,9 @@
    ],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\"\n",
-    "os.getenv('EMBEDDER_MODEL')"
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\"\n",
+    "os.getenv(\"EMBEDDER_MODEL\")"
    ]
   },
   {
@@ -58,9 +60,8 @@
     }
    ],
    "source": [
-    "from dialogue2graph.pipelines.core.dialogue import DialogueMessage, Dialogue\n",
-    "import pickle\n",
-    "import numpy as np"
+    "from dialogue2graph.pipelines.core.dialogue import Dialogue\n",
+    "import pickle"
    ]
   },
   {
@@ -110,7 +111,7 @@
     "from dialogue2graph.metrics.no_llm_metrics.metrics import match_roles, is_correct_length\n",
     "from augmentation_utils import (\n",
     "    check_no_duplicates_all_dialogues,\n",
-    "    check_no_duplicates_one_dialogue\n",
+    "    check_no_duplicates_one_dialogue,\n",
     ")"
    ]
   },
@@ -462,9 +463,9 @@
     "failure_examples = []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    print(f'example {i}')\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    print(f\"example {i}\")\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "\n",
     "    try:\n",
     "        if not check_no_duplicates_all_dialogues(augmented_dialogues):\n",
@@ -539,7 +540,7 @@
    ],
    "source": [
     "for example in [data[6], data[30], data[66], data[74]]:\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
     "    print(len(dialogues))\n",
     "    lens = [len(dia) for dia in dialogues]\n",
     "    print(lens)"
@@ -613,9 +614,9 @@
     "new_data_2 = []\n",
     "\n",
     "for i, example in enumerate(tqdm(new_data)):\n",
-    "    print(f'example {i}')\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    print(f\"example {i}\")\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
@@ -715,13 +716,15 @@
     "new_data_3 = []\n",
     "\n",
     "for i, example in enumerate(tqdm(new_data_2)):\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    try:\n",
     "        for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
-    "            if not match_roles(Dialogue.from_list(orig_dia), Dialogue.from_list(aug_dia)):\n",
+    "            if not match_roles(\n",
+    "                Dialogue.from_list(orig_dia), Dialogue.from_list(aug_dia)\n",
+    "            ):\n",
     "                failure_examples.append((i, j))\n",
     "            else:\n",
     "                true_count += 1\n",
@@ -751,13 +754,15 @@
     "new_data_4 = []\n",
     "\n",
     "for i, example in enumerate(tqdm(new_data_3)):\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    try:\n",
     "        for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
-    "            if not is_correct_length(Dialogue.from_list(orig_dia), Dialogue.from_list(aug_dia)):\n",
+    "            if not is_correct_length(\n",
+    "                Dialogue.from_list(orig_dia), Dialogue.from_list(aug_dia)\n",
+    "            ):\n",
     "                failure_examples.append((i, j))\n",
     "            else:\n",
     "                true_count += 1\n",
@@ -840,7 +845,7 @@
     "from dialogue2graph.metrics.no_llm_metrics.metrics import match_roles, is_correct_length\n",
     "from augmentation_utils import (\n",
     "    check_no_duplicates_all_dialogues,\n",
-    "    check_no_duplicates_one_dialogue\n",
+    "    check_no_duplicates_one_dialogue,\n",
     ")"
    ]
   },
@@ -889,9 +894,9 @@
     "failure_examples = []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    print(f'example {i}')\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    print(f\"example {i}\")\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "\n",
     "    try:\n",
     "        if not check_no_duplicates_all_dialogues(augmented_dialogues):\n",
@@ -958,8 +963,8 @@
     "new_data_2 = []\n",
     "\n",
     "for i, example in enumerate(tqdm(new_data)):\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
@@ -1000,13 +1005,15 @@
     "new_data_3 = []\n",
     "\n",
     "for i, example in enumerate(tqdm(new_data_2)):\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    try:\n",
     "        for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
-    "            if not match_roles(Dialogue.from_list(orig_dia), Dialogue.from_list(aug_dia)):\n",
+    "            if not match_roles(\n",
+    "                Dialogue.from_list(orig_dia), Dialogue.from_list(aug_dia)\n",
+    "            ):\n",
     "                failure_examples.append((i, j))\n",
     "            else:\n",
     "                true_count += 1\n",
@@ -1036,13 +1043,15 @@
     "new_data_4 = []\n",
     "\n",
     "for i, example in enumerate(tqdm(new_data_3)):\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    try:\n",
     "        for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
-    "            if not is_correct_length(Dialogue.from_list(orig_dia), Dialogue.from_list(aug_dia)):\n",
+    "            if not is_correct_length(\n",
+    "                Dialogue.from_list(orig_dia), Dialogue.from_list(aug_dia)\n",
+    "            ):\n",
     "                failure_examples.append((i, j))\n",
     "            else:\n",
     "                true_count += 1\n",
