--- a/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/find_duplicates.ipynb
+++ b/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/find_duplicates.ipynb
@@ -2410,14 +2410,14 @@
     "failure_examples = []\n",
     "new_data = []\n",
     "\n",
-    "for i, example in enumerate(tqdm(dataset['train'])):\n",
-    "    print(f'example {i}')\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
+    "for i, example in enumerate(tqdm(dataset[\"train\"])):\n",
+    "    print(f\"example {i}\")\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    for j, dia in enumerate(dialogues):\n",
     "        try:\n",
-    "            # if there're duplcates in the dialogue, add graph serial number \n",
+    "            # if there're duplcates in the dialogue, add graph serial number\n",
     "            # and dialogue serial number to the failure_examples\n",
     "            if not check_no_duplicates_one_dialogue(dia):\n",
     "                failure_examples.append((i, j))\n",
@@ -2468,8 +2468,8 @@
     }
    ],
    "source": [
-    "#example with 2 greetings within 1 dialogue\n",
-    "dataset['train'][2]['dialogues'][0]"
+    "# example with 2 greetings within 1 dialogue\n",
+    "dataset[\"train\"][2][\"dialogues\"][0]"
    ]
   },
   {
