--- a/experiments/exp2025_03_26_dia_augmentation/exp2025_03_26_dia_augmentation/dia_augmentation.ipynb
+++ b/experiments/exp2025_03_26_dia_augmentation/exp2025_03_26_dia_augmentation/dia_augmentation.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -74,10 +76,11 @@
    "outputs": [],
    "source": [
     "from augmentation_prompts import (\n",
-    "    variations_augmentation_prompt_2, variations_augmentation_prompt_4,\n",
-    "    variations_augmentation_prompt_9\n",
-    "    )\n",
-    "from dialogue_augmentation import augment_dialogue, augment_dialogue_data"
+    "    variations_augmentation_prompt_2,\n",
+    "    variations_augmentation_prompt_4,\n",
+    "    variations_augmentation_prompt_9,\n",
+    ")\n",
+    "from dialogue_augmentation import augment_dialogue_data"
    ]
   },
   {
@@ -95,14 +98,16 @@
    "source": [
     "augmentation_prompt = PromptTemplate.from_template(variations_augmentation_prompt_2)\n",
     "\n",
+    "\n",
     "class DialogueSequence(BaseModel):\n",
     "    result: List[DialogueMessage]\n",
     "\n",
+    "\n",
     "model = ChatOpenAI(\n",
-    "    model=\"gpt-4o-mini-2024-07-18\", \n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"), \n",
-    "    base_url=os.getenv(\"OPENAI_BASE_URL\"), \n",
-    "    temperature=0.7\n",
+    "    model=\"gpt-4o-mini-2024-07-18\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0.7,\n",
     ")\n",
     "\n",
     "parser = JsonOutputParser(pydantic_object=DialogueSequence)\n",
@@ -127,8 +132,8 @@
     }
    ],
    "source": [
-    "example = dataset['train'][0]\n",
-    "dialogues = [dial['messages'] for dial in example['dialogues']]\n",
+    "example = dataset[\"train\"][0]\n",
+    "dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
     "len(dialogues)"
    ]
   },
@@ -178,7 +183,7 @@
     }
    ],
    "source": [
-    "topic = example['topic']\n",
+    "topic = example[\"topic\"]\n",
     "orig_dialogue = dialogues[0]\n",
     "orig_dialogue"
    ]
@@ -289,10 +294,7 @@
     }
    ],
    "source": [
-    "aug_dialogue = chain.invoke({\n",
-    "            \"topic\": topic,\n",
-    "            \"dialogue\": orig_dialogue\n",
-    "        })\n",
+    "aug_dialogue = chain.invoke({\"topic\": topic, \"dialogue\": orig_dialogue})\n",
     "aug_dialogue"
    ]
   },
@@ -446,30 +448,24 @@
     "new_data = []\n",
     "i = 0\n",
     "\n",
-    "for i, example in enumerate(dataset['train']):\n",
-    "    print(f'Augmenting example {i}:')\n",
-    "    topic = example['topic']\n",
-    "    all_dialogues = example['dialogues']\n",
+    "for i, example in enumerate(dataset[\"train\"]):\n",
+    "    print(f\"Augmenting example {i}:\")\n",
+    "    topic = example[\"topic\"]\n",
+    "    all_dialogues = example[\"dialogues\"]\n",
     "\n",
-    "    example['augmented_dialogues'] = []\n",
+    "    example[\"augmented_dialogues\"] = []\n",
     "\n",
     "    for element in tqdm(all_dialogues, total=len(all_dialogues)):\n",
-    "        orig_dialogue = element['messages']\n",
-    "        try:         \n",
-    "            aug_dialogue = chain.invoke({\n",
-    "                \"topic\": topic,\n",
-    "                \"dialogue\": orig_dialogue\n",
-    "            })\n",
+    "        orig_dialogue = element[\"messages\"]\n",
+    "        try:\n",
+    "            aug_dialogue = chain.invoke({\"topic\": topic, \"dialogue\": orig_dialogue})\n",
     "        except Exception as e:\n",
     "            aug_dialogue = e\n",
     "\n",
-    "        example['augmented_dialogues'].append(\n",
-    "            {\n",
-    "                'id' : element['id'],\n",
-    "                'messages' : aug_dialogue\n",
-    "                }\n",
-    "            )\n",
-    "        \n",
+    "        example[\"augmented_dialogues\"].append(\n",
+    "            {\"id\": element[\"id\"], \"messages\": aug_dialogue}\n",
+    "        )\n",
+    "\n",
     "    new_data.append(example)\n",
     "    with open(\"../data/gen_dataset_augment_uttr-vars\", \"wb\") as fp:\n",
     "        pickle.dump(new_data, fp)\n",
@@ -522,8 +518,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(2)), variations_augmentation_prompt_4,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_4_2\")"
+    "    dataset[\"train\"].select(range(2)),\n",
+    "    variations_augmentation_prompt_4,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_4_2\",\n",
+    ")"
    ]
   },
   {
@@ -562,8 +561,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(2)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_2\")"
+    "    dataset[\"train\"].select(range(2)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_2\",\n",
+    ")"
    ]
   },
   {
@@ -693,8 +695,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(2, 10)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_8\")"
+    "    dataset[\"train\"].select(range(2, 10)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_8\",\n",
+    ")"
    ]
   },
   {
@@ -861,8 +866,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(10, 20)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_20\")"
+    "    dataset[\"train\"].select(range(10, 20)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_20\",\n",
+    ")"
    ]
   },
   {
@@ -1013,8 +1021,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(20, 30)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_30\")"
+    "    dataset[\"train\"].select(range(20, 30)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_30\",\n",
+    ")"
    ]
   },
   {
@@ -1165,8 +1176,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(30, 40)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_40\")"
+    "    dataset[\"train\"].select(range(30, 40)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_40\",\n",
+    ")"
    ]
   },
   {
@@ -1317,8 +1331,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(40, 50)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_50\")"
+    "    dataset[\"train\"].select(range(40, 50)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_50\",\n",
+    ")"
    ]
   },
   {
@@ -1469,8 +1486,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(50, 60)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_60\")"
+    "    dataset[\"train\"].select(range(50, 60)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_60\",\n",
+    ")"
    ]
   },
   {
@@ -1621,8 +1641,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(60, 70)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_70\")"
+    "    dataset[\"train\"].select(range(60, 70)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_70\",\n",
+    ")"
    ]
   },
   {
@@ -1773,8 +1796,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(70, 80)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_80\")"
+    "    dataset[\"train\"].select(range(70, 80)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_80\",\n",
+    ")"
    ]
   },
   {
@@ -1925,8 +1951,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(80, 90)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_90\")"
+    "    dataset[\"train\"].select(range(80, 90)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_90\",\n",
+    ")"
    ]
   },
   {
@@ -2077,8 +2106,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(90, 100)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_100\")"
+    "    dataset[\"train\"].select(range(90, 100)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_100\",\n",
+    ")"
    ]
   },
   {
@@ -2131,7 +2163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augment_uttr-vars_9.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(all_data, file, indent=4)"
    ]
   }
