--- a/experiments/exp2025_03_26_dia_augmentation/exp2025_03_26_dia_augmentation/dia_augmentation_check.ipynb
+++ b/experiments/exp2025_03_26_dia_augmentation/exp2025_03_26_dia_augmentation/dia_augmentation_check.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -40,9 +42,12 @@
     "from tqdm import tqdm\n",
     "import pickle\n",
     "from augmentation_utils import (\n",
-    "    check_no_duplicates_all_dialogues, check_no_duplicates_one_dialogue, check_no_duplicates_one_uttr_list,\n",
-    "    is_correct_length_modified, match_roles_modified\n",
-    "    )"
+    "    check_no_duplicates_all_dialogues,\n",
+    "    check_no_duplicates_one_dialogue,\n",
+    "    check_no_duplicates_one_uttr_list,\n",
+    "    is_correct_length_modified,\n",
+    "    match_roles_modified,\n",
+    ")"
    ]
   },
   {
@@ -112,8 +117,8 @@
     "new_data = []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    try:\n",
@@ -145,8 +150,8 @@
    "outputs": [],
    "source": [
     "for i, j in failure_examples:\n",
-    "    orig_dia = data[i]['dialogues'][j]['messages']\n",
-    "    aug_dia = data[i]['augmented_dialogues'][j]['messages']\n",
+    "    orig_dia = data[i][\"dialogues\"][j][\"messages\"]\n",
+    "    aug_dia = data[i][\"augmented_dialogues\"][j][\"messages\"]\n",
     "    break"
    ]
   },
@@ -199,8 +204,8 @@
     "new_data = []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in example[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    try:\n",
@@ -254,7 +259,7 @@
     "failure_examples = []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
@@ -660,7 +665,7 @@
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
     "    print(i)\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "    true_count = 0\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
@@ -1017,8 +1022,8 @@
     "failure_examples = []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    print(f'example {i}')\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    print(f\"example {i}\")\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "\n",
     "    try:\n",
     "        if not check_no_duplicates_all_dialogues(augmented_dialogues):\n",
