--- a/experiments/exp2025_03_29_dia_augmentation_all_dataset/exp2025_03_29_dia_augmentation_all_dataset/dia_augmentation.ipynb
+++ b/experiments/exp2025_03_29_dia_augmentation_all_dataset/exp2025_03_29_dia_augmentation_all_dataset/dia_augmentation.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -101,7 +103,9 @@
     }
    ],
    "source": [
-    "with open(f\"../data/gen_dataset_augment_uttr-vars_9_v2.json\", \"r\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_v2.json\", \"r\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    data = json.load(file)\n",
     "len(data)"
    ]
@@ -153,8 +157,8 @@
     "failure_instances_roles = []\n",
     "\n",
     "for i, instance in enumerate(tqdm(data)):\n",
-    "    dialogues = [dial['messages'] for dial in instance['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in instance['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in instance[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in instance[\"augmented_dialogues\"]]\n",
     "\n",
     "    for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
     "        length_comparison = is_correct_length_modified(orig_dia, aug_dia)\n",
@@ -163,7 +167,7 @@
     "        if length_comparison != True:\n",
     "            failure_instances_length.append((i, j, length_comparison))\n",
     "        if roles_comparison != True:\n",
-    "            failure_instances_roles.append((i, j, roles_comparison))      \n",
+    "            failure_instances_roles.append((i, j, roles_comparison))\n",
     "\n",
     "failure_instances_length, failure_instances_roles"
    ]
@@ -187,20 +191,25 @@
    ],
    "source": [
     "for i, j, _ in failure_instances_length:\n",
-    "    print(f'Augmenting example {i} dialogue {j}')\n",
-    "    topic = data[i]['topic']\n",
-    "    orig_dialogue = data[i]['dialogues'][j]['messages']\n",
+    "    print(f\"Augmenting example {i} dialogue {j}\")\n",
+    "    topic = data[i][\"topic\"]\n",
+    "    orig_dialogue = data[i][\"dialogues\"][j][\"messages\"]\n",
     "\n",
-    "    try:         \n",
+    "    try:\n",
     "        aug_dialogue = augment_dialogue(\n",
-    "            orig_dialogue, topic, variations_augmentation_prompt_9, \"gpt-4o-mini-2024-07-18\"\n",
+    "            orig_dialogue,\n",
+    "            topic,\n",
+    "            variations_augmentation_prompt_9,\n",
+    "            \"gpt-4o-mini-2024-07-18\",\n",
     "        )\n",
     "    except Exception as e:\n",
     "        aug_dialogue = e\n",
     "\n",
-    "    data[i]['augmented_dialogues'][j]['messages'] = aug_dialogue\n",
+    "    data[i][\"augmented_dialogues\"][j][\"messages\"] = aug_dialogue\n",
     "\n",
-    "with open(f\"../data/gen_dataset_augment_uttr-vars_9_v3.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_v3.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(data, file, indent=4)"
    ]
   },
@@ -221,7 +230,7 @@
     }
    ],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-99.json\", \"r\", encoding=\"utf-8\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_0-99.json\", \"r\", encoding=\"utf-8\") as file:\n",
     "    data = json.load(file)\n",
     "len(data)"
    ]
@@ -240,6 +249,7 @@
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
+    "\n",
     "dataset = load_dataset(\"DeepPavlov/d2g_generated\", token=True)"
    ]
   },
@@ -250,8 +260,11 @@
    "outputs": [],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(100, 101)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_150_part1\")"
+    "    dataset[\"train\"].select(range(100, 101)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_150_part1\",\n",
+    ")"
    ]
   },
   {
@@ -948,8 +961,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(101, 150)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_150_part2\")"
+    "    dataset[\"train\"].select(range(101, 150)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_150_part2\",\n",
+    ")"
    ]
   },
   {
@@ -1660,8 +1676,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(150, 200)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_150-199\")"
+    "    dataset[\"train\"].select(range(150, 200)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_150-199\",\n",
+    ")"
    ]
   },
   {
@@ -1690,7 +1709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_150-199.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_150-199.json\", \"w\", encoding=\"utf-8\") as file:\n",
     "    json.dump(new_data, file, indent=4)"
    ]
   },
@@ -2388,8 +2407,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(201, 250)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_200-249_part2\")"
+    "    dataset[\"train\"].select(range(201, 250)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_200-249_part2\",\n",
+    ")"
    ]
   },
   {
@@ -3100,8 +3122,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(250, 300)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_250-299\")"
+    "    dataset[\"train\"].select(range(250, 300)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_250-299\",\n",
+    ")"
    ]
   },
   {
@@ -3130,7 +3155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_250-299.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_250-299.json\", \"w\", encoding=\"utf-8\") as file:\n",
     "    json.dump(new_data, file, indent=4)"
    ]
   },
@@ -3842,8 +3867,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(300, 350)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_300-349\")"
+    "    dataset[\"train\"].select(range(300, 350)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_300-349\",\n",
+    ")"
    ]
   },
   {
@@ -3872,7 +3900,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_300-349.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_300-349.json\", \"w\", encoding=\"utf-8\") as file:\n",
     "    json.dump(new_data, file, indent=4)"
    ]
   },
@@ -4584,8 +4612,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(350, 400)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_350-399\")"
+    "    dataset[\"train\"].select(range(350, 400)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_350-399\",\n",
+    ")"
    ]
   },
   {
@@ -4614,7 +4645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_350-399.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_350-399.json\", \"w\", encoding=\"utf-8\") as file:\n",
     "    json.dump(new_data, file, indent=4)"
    ]
   },
@@ -4654,8 +4685,11 @@
    ],
    "source": [
     "new_data = augment_dialogue_data(\n",
-    "    dataset['train'].select(range(400, 402)), variations_augmentation_prompt_9,\n",
-    "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_400-402\")"
+    "    dataset[\"train\"].select(range(400, 402)),\n",
+    "    variations_augmentation_prompt_9,\n",
+    "    \"gpt-4o-mini-2024-07-18\",\n",
+    "    \"../data/gen_dataset_augment_uttr-vars_9_400-402\",\n",
+    ")"
    ]
   },
   {
@@ -4684,7 +4718,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_400-402.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_400-402.json\", \"w\", encoding=\"utf-8\") as file:\n",
     "    json.dump(new_data, file, indent=4)"
    ]
   },
@@ -4701,13 +4735,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augment_uttr-vars_9_100-149_part1\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augment_uttr-vars_9_100-149_part1\", \"rb\") as file:\n",
     "    data_1 = pickle.load(file)\n",
-    "with open(f\"../data/gen_dataset_augment_uttr-vars_9_100-149_part2\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augment_uttr-vars_9_100-149_part2\", \"rb\") as file:\n",
     "    data_2 = pickle.load(file)\n",
     "\n",
     "all_data = data_1 + data_2\n",
-    "with open(f\"../data/gen_dataset_augmented_100-149\", \"wb\") as fp:\n",
+    "with open(\"../data/gen_dataset_augmented_100-149\", \"wb\") as fp:\n",
     "    pickle.dump(all_data, fp)"
    ]
   },
@@ -4717,13 +4751,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augment_uttr-vars_9_200-249_part1\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augment_uttr-vars_9_200-249_part1\", \"rb\") as file:\n",
     "    data_1 = pickle.load(file)\n",
-    "with open(f\"../data/gen_dataset_augment_uttr-vars_9_200-249_part2\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augment_uttr-vars_9_200-249_part2\", \"rb\") as file:\n",
     "    data_2 = pickle.load(file)\n",
     "\n",
     "all_data = data_1 + data_2\n",
-    "with open(f\"../data/gen_dataset_augmented_200-249_v2\", \"wb\") as fp:\n",
+    "with open(\"../data/gen_dataset_augmented_200-249_v2\", \"wb\") as fp:\n",
     "    pickle.dump(all_data, fp)"
    ]
   },
@@ -4746,11 +4780,11 @@
    "source": [
     "with open(\"../data/gen_dataset_augmented_0-99.json\", \"r\") as fp:\n",
     "    data_100 = json.load(fp)\n",
-    "with open(f\"../data/gen_dataset_augmented_100-149\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_100-149\", \"rb\") as file:\n",
     "    data_150 = pickle.load(file)\n",
     "with open(\"../data/gen_dataset_augmented_150-199.json\", \"r\") as fp:\n",
     "    data_200 = json.load(fp)\n",
-    "with open(f\"../data/gen_dataset_augmented_200-249_v2\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_200-249_v2\", \"rb\") as file:\n",
     "    data_250 = pickle.load(file)\n",
     "with open(\"../data/gen_dataset_augmented_250-299.json\", \"r\") as fp:\n",
     "    data_300 = json.load(fp)\n",
@@ -4761,7 +4795,16 @@
     "with open(\"../data/gen_dataset_augmented_400-402.json\", \"r\") as fp:\n",
     "    data_402 = json.load(fp)\n",
     "\n",
-    "data = data_100 + data_150 + data_200 + data_250 + data_300 + data_350 + data_400 + data_402\n",
+    "data = (\n",
+    "    data_100\n",
+    "    + data_150\n",
+    "    + data_200\n",
+    "    + data_250\n",
+    "    + data_300\n",
+    "    + data_350\n",
+    "    + data_400\n",
+    "    + data_402\n",
+    ")\n",
     "len(data)"
    ]
   },
@@ -4790,12 +4833,16 @@
    ],
    "source": [
     "from datasets import load_dataset\n",
+    "\n",
     "dataset = load_dataset(\"DeepPavlov/d2g_generated\", token=True)\n",
     "\n",
     "count = 0\n",
-    "for d1, d2 in zip(data, dataset['train']):\n",
-    "    if (d1['graph'] == d2['graph'] and d1['topic'] == d2['topic'] and \n",
-    "        d1['dialogues'] == d2['dialogues']):\n",
+    "for d1, d2 in zip(data, dataset[\"train\"]):\n",
+    "    if (\n",
+    "        d1[\"graph\"] == d2[\"graph\"]\n",
+    "        and d1[\"topic\"] == d2[\"topic\"]\n",
+    "        and d1[\"dialogues\"] == d2[\"dialogues\"]\n",
+    "    ):\n",
     "        count += 1\n",
     "count"
    ]
@@ -4813,7 +4860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402\", \"wb\") as fp:\n",
+    "with open(\"../data/gen_dataset_augmented_0-402\", \"wb\") as fp:\n",
     "    pickle.dump(data, fp)"
    ]
   }
