--- a/experiments/exp2025_03_29_dia_augmentation_all_dataset/exp2025_03_29_dia_augmentation_all_dataset/dia_augmentation_check.ipynb
+++ b/experiments/exp2025_03_29_dia_augmentation_all_dataset/exp2025_03_29_dia_augmentation_all_dataset/dia_augmentation_check.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -41,8 +43,10 @@
     "import json\n",
     "import pickle\n",
     "from augmentation_utils import (\n",
-    "    check_no_duplicates_one_uttr_list, is_correct_length_modified, match_roles_modified\n",
-    "    )"
+    "    check_no_duplicates_one_uttr_list,\n",
+    "    is_correct_length_modified,\n",
+    "    match_roles_modified,\n",
+    ")"
    ]
   },
   {
@@ -59,9 +63,7 @@
      ]
     }
    ],
-   "source": [
-    "from dialogue2graph.pipelines.core.dialogue import DialogueMessage, Dialogue"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -87,7 +89,7 @@
     }
    ],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_0-402\", \"rb\") as file:\n",
     "    data = pickle.load(file)\n",
     "len(data)"
    ]
@@ -149,8 +151,8 @@
     "failure_instances_roles = []\n",
     "\n",
     "for i, instance in enumerate(tqdm(data)):\n",
-    "    dialogues = [dial['messages'] for dial in instance['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in instance['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in instance[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in instance[\"augmented_dialogues\"]]\n",
     "\n",
     "    for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
     "        length_comparison = is_correct_length_modified(orig_dia, aug_dia)\n",
@@ -159,7 +161,7 @@
     "        if length_comparison != True:\n",
     "            failure_instances_length.append((i, j, length_comparison))\n",
     "        if roles_comparison != True:\n",
-    "            failure_instances_roles.append((i, j, roles_comparison))      \n",
+    "            failure_instances_roles.append((i, j, roles_comparison))\n",
     "\n",
     "len(failure_instances_length), len(failure_instances_roles)"
    ]
@@ -199,7 +201,7 @@
     "failure_examples = []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in example[\"augmented_dialogues\"]]\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
     "        try:\n",
@@ -252,11 +254,11 @@
     "normals, exceptions, errors = [], [], []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    augmented_dialogues = example['augmented_dialogues']\n",
+    "    augmented_dialogues = example[\"augmented_dialogues\"]\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
     "        try:\n",
-    "            utterances_lists = [turn['text'] for turn in aug_dia['messages']]\n",
+    "            utterances_lists = [turn[\"text\"] for turn in aug_dia[\"messages\"]]\n",
     "            lens = [len(uttr_list) for uttr_list in utterances_lists]\n",
     "            if set(lens) == {3}:\n",
     "                normals.append((i, j))\n",
@@ -264,9 +266,9 @@
     "                # exceptions.append((i, j, lens))\n",
     "                exceptions.append((i, j))\n",
     "            all_lens.append(lens)\n",
-    "        except Exception as e:\n",
+    "        except Exception:\n",
     "            # errors.append((i, j, e))\n",
-    "            errors.append((i, j))     \n",
+    "            errors.append((i, j))\n",
     "len(errors), len(all_lens), len(normals), len(exceptions)"
    ]
   },
@@ -312,19 +314,19 @@
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
     "    new_example = {}\n",
-    "    new_example['graph'] = example['graph']\n",
-    "    new_example['topic'] = example['topic']\n",
-    "    new_example['dialogues'] = []\n",
-    "    new_example['augmented_dialogues'] = []\n",
-    "        \n",
-    "    dialogues = example['dialogues']\n",
-    "    augmented_dialogues = example['augmented_dialogues']\n",
+    "    new_example[\"graph\"] = example[\"graph\"]\n",
+    "    new_example[\"topic\"] = example[\"topic\"]\n",
+    "    new_example[\"dialogues\"] = []\n",
+    "    new_example[\"augmented_dialogues\"] = []\n",
+    "\n",
+    "    dialogues = example[\"dialogues\"]\n",
+    "    augmented_dialogues = example[\"augmented_dialogues\"]\n",
     "\n",
     "    for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
     "        if (i, j) not in exceptions and (i, j) not in errors:\n",
-    "            new_example['dialogues'].append(orig_dia)\n",
-    "            new_example['augmented_dialogues'].append(aug_dia)\n",
-    "        \n",
+    "            new_example[\"dialogues\"].append(orig_dia)\n",
+    "            new_example[\"augmented_dialogues\"].append(aug_dia)\n",
+    "\n",
     "    new_data.append(new_example)\n",
     "len(new_data)"
    ]
@@ -357,11 +359,11 @@
     "normals, exceptions, errors = [], [], []\n",
     "\n",
     "for i, example in enumerate(tqdm(new_data)):\n",
-    "    augmented_dialogues = example['augmented_dialogues']\n",
+    "    augmented_dialogues = example[\"augmented_dialogues\"]\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
     "        try:\n",
-    "            utterances_lists = [turn['text'] for turn in aug_dia['messages']]\n",
+    "            utterances_lists = [turn[\"text\"] for turn in aug_dia[\"messages\"]]\n",
     "            lens = [len(uttr_list) for uttr_list in utterances_lists]\n",
     "            if set(lens) == {3}:\n",
     "                normals.append((i, j))\n",
@@ -370,7 +372,7 @@
     "                exceptions.append((i, j))\n",
     "            all_lens.append(lens)\n",
     "        except Exception as e:\n",
-    "            errors.append((i, j, e))    \n",
+    "            errors.append((i, j, e))\n",
     "errors"
    ]
   },
@@ -420,15 +422,15 @@
     "new_data_2 = []\n",
     "\n",
     "for i, example in enumerate(tqdm(new_data)):\n",
-    "    if example['augmented_dialogues'] == []:\n",
+    "    if example[\"augmented_dialogues\"] == []:\n",
     "        print(i)\n",
     "        continue\n",
     "\n",
     "    new_example = {}\n",
-    "    new_example['graph'] = example['graph']\n",
-    "    new_example['topic'] = example['topic']\n",
-    "    new_example['dialogues'] = example['dialogues']\n",
-    "    new_example['augmented_dialogues'] = example['augmented_dialogues']\n",
+    "    new_example[\"graph\"] = example[\"graph\"]\n",
+    "    new_example[\"topic\"] = example[\"topic\"]\n",
+    "    new_example[\"dialogues\"] = example[\"dialogues\"]\n",
+    "    new_example[\"augmented_dialogues\"] = example[\"augmented_dialogues\"]\n",
     "\n",
     "    new_data_2.append(new_example)\n",
     "len(new_data_2)"
@@ -440,7 +442,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402_cleaned.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"../data/gen_dataset_augmented_0-402_cleaned.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(new_data_2, file, indent=4)"
    ]
   },
@@ -488,23 +492,25 @@
    ],
    "source": [
     "for i, example in enumerate(tqdm(data)):\n",
-    "    dialogues = example['dialogues']\n",
-    "    augmented_dialogues = example['augmented_dialogues']\n",
-    "    \n",
-    "    for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
-    "        for orig_turn, aug_turn in zip(orig_dia['messages'], aug_dia['messages']):\n",
-    "            phrase_to_look_for = orig_turn['text']\n",
-    "            phrases_to_add = aug_turn['text']\n",
+    "    dialogues = example[\"dialogues\"]\n",
+    "    augmented_dialogues = example[\"augmented_dialogues\"]\n",
     "\n",
-    "            if aug_turn['participant'] == 'assistant':\n",
-    "                key = 'nodes'\n",
-    "            elif aug_turn['participant'] == 'user':\n",
-    "                key = 'edges'\n",
-    "            \n",
-    "            for turn in example['graph'][key]:\n",
-    "                if (phrase_to_look_for in turn['utterances'] and \n",
-    "                    phrases_to_add not in turn['utterances']):\n",
-    "                    turn['utterances'] += phrases_to_add"
+    "    for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
+    "        for orig_turn, aug_turn in zip(orig_dia[\"messages\"], aug_dia[\"messages\"]):\n",
+    "            phrase_to_look_for = orig_turn[\"text\"]\n",
+    "            phrases_to_add = aug_turn[\"text\"]\n",
+    "\n",
+    "            if aug_turn[\"participant\"] == \"assistant\":\n",
+    "                key = \"nodes\"\n",
+    "            elif aug_turn[\"participant\"] == \"user\":\n",
+    "                key = \"edges\"\n",
+    "\n",
+    "            for turn in example[\"graph\"][key]:\n",
+    "                if (\n",
+    "                    phrase_to_look_for in turn[\"utterances\"]\n",
+    "                    and phrases_to_add not in turn[\"utterances\"]\n",
+    "                ):\n",
+    "                    turn[\"utterances\"] += phrases_to_add"
    ]
   },
   {
@@ -544,7 +550,7 @@
     }
    ],
    "source": [
-    "data[0]['graph']['edges'][4]"
+    "data[0][\"graph\"][\"edges\"][4]"
    ]
   },
   {
@@ -562,11 +568,11 @@
    ],
    "source": [
     "for i, example in enumerate(tqdm(data)):\n",
-    "    for key in ['nodes', 'edges']:\n",
-    "        for turn in example['graph'][key]:\n",
-    "            while '' in turn['utterances']:\n",
-    "                turn['utterances'].remove('')\n",
-    "            turn['utterances'] = list(set(turn['utterances']))"
+    "    for key in [\"nodes\", \"edges\"]:\n",
+    "        for turn in example[\"graph\"][key]:\n",
+    "            while \"\" in turn[\"utterances\"]:\n",
+    "                turn[\"utterances\"].remove(\"\")\n",
+    "            turn[\"utterances\"] = list(set(turn[\"utterances\"]))"
    ]
   },
   {
@@ -600,7 +606,7 @@
     }
    ],
    "source": [
-    "data[0]['graph']['edges'][4]"
+    "data[0][\"graph\"][\"edges\"][4]"
    ]
   },
   {
@@ -609,7 +615,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402_nodes_edges.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"../data/gen_dataset_augmented_0-402_nodes_edges.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(data, file, indent=4)"
    ]
   },
@@ -650,17 +658,17 @@
    "source": [
     "def combine_new_aug_dia(aug_dia, k):\n",
     "    new_aug_dia = {}\n",
-    "    new_aug_dia['id'] = aug_dia['id'] + f'_{k}'\n",
-    "    new_aug_dia['messages'] = []\n",
+    "    new_aug_dia[\"id\"] = aug_dia[\"id\"] + f\"_{k}\"\n",
+    "    new_aug_dia[\"messages\"] = []\n",
     "\n",
-    "    roles_to_add = [turn['participant'] for turn in aug_dia['messages']]            \n",
-    "    utterances_to_add = [turn['text'][k] for turn in aug_dia['messages']]\n",
+    "    roles_to_add = [turn[\"participant\"] for turn in aug_dia[\"messages\"]]\n",
+    "    utterances_to_add = [turn[\"text\"][k] for turn in aug_dia[\"messages\"]]\n",
     "\n",
     "    for role, uttr in zip(roles_to_add, utterances_to_add):\n",
     "        dict_messages = {}\n",
-    "        dict_messages['participant'] = role\n",
-    "        dict_messages['text'] = uttr         \n",
-    "        new_aug_dia['messages'].append(dict_messages)\n",
+    "        dict_messages[\"participant\"] = role\n",
+    "        dict_messages[\"text\"] = uttr\n",
+    "        new_aug_dia[\"messages\"].append(dict_messages)\n",
     "\n",
     "    return new_aug_dia"
    ]
@@ -701,27 +709,27 @@
     "for i, example in enumerate(tqdm(data)):\n",
     "    # make a copy of example from old data\n",
     "    new_example = {}\n",
-    "    new_example['graph'] = example['graph']\n",
-    "    new_example['topic'] = example['topic']\n",
-    "    \n",
-    "    # dialogues and augmented_dialogues will be set later\n",
-    "    new_example['dialogues'] = []\n",
-    "    new_example['augmented_dialogues'] = []    \n",
+    "    new_example[\"graph\"] = example[\"graph\"]\n",
+    "    new_example[\"topic\"] = example[\"topic\"]\n",
     "\n",
-    "    dialogues = example['dialogues']\n",
-    "    augmented_dialogues = example['augmented_dialogues']\n",
+    "    # dialogues and augmented_dialogues will be set later\n",
+    "    new_example[\"dialogues\"] = []\n",
+    "    new_example[\"augmented_dialogues\"] = []\n",
+    "\n",
+    "    dialogues = example[\"dialogues\"]\n",
+    "    augmented_dialogues = example[\"augmented_dialogues\"]\n",
     "\n",
     "    # take a pair of orig_dia and aug_dia (aug_dia has 3 variations of all phrases)\n",
     "    for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
     "        # set an orig_dia without changes\n",
-    "        new_example['dialogues'].append(orig_dia)\n",
+    "        new_example[\"dialogues\"].append(orig_dia)\n",
     "\n",
-    "        #combine 3 new aug_dias from 1 old aug_dia\n",
+    "        # combine 3 new aug_dias from 1 old aug_dia\n",
     "        for k in range(3):\n",
     "            new_aug_dia = combine_new_aug_dia(aug_dia, k)\n",
     "            # add new aug_dia to the new example\n",
-    "            new_example['augmented_dialogues'].append(new_aug_dia)\n",
-    "            \n",
+    "            new_example[\"augmented_dialogues\"].append(new_aug_dia)\n",
+    "\n",
     "    # add new example with new aug_dias to the new data\n",
     "    new_data.append(new_example)\n",
     "len(new_data)"
@@ -733,7 +741,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402_combined.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"../data/gen_dataset_augmented_0-402_combined.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(new_data, file, indent=4)"
    ]
   },
@@ -785,7 +795,7 @@
     }
    ],
    "source": [
-    "new_data[0]['augmented_dialogues'][0]"
+    "new_data[0][\"augmented_dialogues\"][0]"
    ]
   },
   {
@@ -921,7 +931,7 @@
     }
    ],
    "source": [
-    "new_data[0]['graph']['edges']"
+    "new_data[0][\"graph\"][\"edges\"]"
    ]
   }
  ],
