--- a/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/dia_augmentation_final_check.ipynb
+++ b/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/dia_augmentation_final_check.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -56,8 +58,8 @@
     "    all_orig_dias, all_aug_dias = 0, 0\n",
     "\n",
     "    for i, example in enumerate(tqdm(data)):\n",
-    "        all_orig_dias += len(example['dialogues'])\n",
-    "        all_aug_dias += len(example['augmented_dialogues'])\n",
+    "        all_orig_dias += len(example[\"dialogues\"])\n",
+    "        all_aug_dias += len(example[\"augmented_dialogues\"])\n",
     "    return len(data), all_orig_dias, all_aug_dias"
    ]
   },
@@ -141,18 +143,27 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(columns=['dataset_version', 'graphs', 'dialogues', 'augmented_dialogues'], index=[0,1,2])\n",
+    "df = pd.DataFrame(\n",
+    "    columns=[\"dataset_version\", \"graphs\", \"dialogues\", \"augmented_dialogues\"],\n",
+    "    index=[0, 1, 2],\n",
+    ")\n",
     "\n",
-    "length, all_orig_dias, all_aug_dias = get_counts(\"../data/gen_dataset_augmented_0-402_combined_v2.json\")\n",
-    "row = np.array(['version_2', length, all_orig_dias, all_aug_dias]).reshape(1,4)\n",
+    "length, all_orig_dias, all_aug_dias = get_counts(\n",
+    "    \"../data/gen_dataset_augmented_0-402_combined_v2.json\"\n",
+    ")\n",
+    "row = np.array([\"version_2\", length, all_orig_dias, all_aug_dias]).reshape(1, 4)\n",
     "df.loc[0] = row\n",
     "\n",
-    "length, all_orig_dias, all_aug_dias = get_counts(\"../data/gen_dataset_augmented_0-402_combined_v4.json\")\n",
-    "row = np.array(['version_4', length, all_orig_dias, all_aug_dias]).reshape(1,4)\n",
+    "length, all_orig_dias, all_aug_dias = get_counts(\n",
+    "    \"../data/gen_dataset_augmented_0-402_combined_v4.json\"\n",
+    ")\n",
+    "row = np.array([\"version_4\", length, all_orig_dias, all_aug_dias]).reshape(1, 4)\n",
     "df.loc[1] = row\n",
     "\n",
-    "length, all_orig_dias, all_aug_dias = get_counts(\"../data/gen_dataset_augmented_0-402_combined_v5.json\")\n",
-    "row = np.array(['version_5', length, all_orig_dias, all_aug_dias]).reshape(1,4)\n",
+    "length, all_orig_dias, all_aug_dias = get_counts(\n",
+    "    \"../data/gen_dataset_augmented_0-402_combined_v5.json\"\n",
+    ")\n",
+    "row = np.array([\"version_5\", length, all_orig_dias, all_aug_dias]).reshape(1, 4)\n",
     "df.loc[2] = row\n",
     "\n",
     "df"
