--- a/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/generation_error_analysis.ipynb
+++ b/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/generation_error_analysis.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -38,12 +40,12 @@
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
-    "import json\n",
     "import pickle\n",
     "import pandas as pd\n",
     "from augmentation_utils import (\n",
-    "    check_no_duplicates_one_uttr_list, is_correct_length_modified, match_roles_modified\n",
-    "    )"
+    "    is_correct_length_modified,\n",
+    "    match_roles_modified,\n",
+    ")"
    ]
   },
   {
@@ -77,7 +79,7 @@
     }
    ],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_0-402\", \"rb\") as file:\n",
     "    data = pickle.load(file)\n",
     "len(data)"
    ]
@@ -110,8 +112,8 @@
     "failure_instances_roles = []\n",
     "\n",
     "for i, instance in enumerate(tqdm(data)):\n",
-    "    dialogues = [dial['messages'] for dial in instance['dialogues']]\n",
-    "    augmented_dialogues = [dial['messages'] for dial in instance['augmented_dialogues']]\n",
+    "    dialogues = [dial[\"messages\"] for dial in instance[\"dialogues\"]]\n",
+    "    augmented_dialogues = [dial[\"messages\"] for dial in instance[\"augmented_dialogues\"]]\n",
     "\n",
     "    for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
     "        length_comparison = is_correct_length_modified(orig_dia, aug_dia)\n",
@@ -120,7 +122,7 @@
     "        if length_comparison != True:\n",
     "            failure_instances_length.append((i, j, length_comparison))\n",
     "        if roles_comparison != True:\n",
-    "            failure_instances_roles.append((i, j, roles_comparison))      \n",
+    "            failure_instances_roles.append((i, j, roles_comparison))\n",
     "\n",
     "len(failure_instances_length), len(failure_instances_roles)"
    ]
@@ -302,8 +304,8 @@
    "source": [
     "dialogues_total = []\n",
     "for graph in sorted(graphs):\n",
-    "    dialogues_total.append((graph, len(data[graph]['dialogues'])))\n",
-    "tmp = pd.DataFrame(dialogues_total, columns=['graph', 'dialogues_total'])\n",
+    "    dialogues_total.append((graph, len(data[graph][\"dialogues\"])))\n",
+    "tmp = pd.DataFrame(dialogues_total, columns=[\"graph\", \"dialogues_total\"])\n",
     "tmp"
    ]
   },
@@ -402,8 +404,12 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(failure_instances_length, columns=['graph', 'dialogue', 'length_error'])\n",
-    "df.groupby('graph').count().reset_index().join(tmp, rsuffix='_').drop(columns=['graph_'])"
+    "df = pd.DataFrame(\n",
+    "    failure_instances_length, columns=[\"graph\", \"dialogue\", \"length_error\"]\n",
+    ")\n",
+    "df.groupby(\"graph\").count().reset_index().join(tmp, rsuffix=\"_\").drop(\n",
+    "    columns=[\"graph_\"]\n",
+    ")"
    ]
   },
   {
@@ -459,7 +465,7 @@
     }
    ],
    "source": [
-    "df.loc[df['graph'] == 100]"
+    "df.loc[df[\"graph\"] == 100]"
    ]
   },
   {
@@ -504,7 +510,7 @@
     }
    ],
    "source": [
-    "data[216]['dialogues'][6]"
+    "data[216][\"dialogues\"][6]"
    ]
   },
   {
@@ -525,7 +531,7 @@
     }
    ],
    "source": [
-    "data[100]['augmented_dialogues'][20]"
+    "data[100][\"augmented_dialogues\"][20]"
    ]
   },
   {
@@ -581,18 +587,21 @@
    "outputs": [],
    "source": [
     "for i, j in [(100, 20), (216, 6)]:\n",
-    "    print(f'Augmenting example {i} dialogue {j}')\n",
-    "    topic = data[i]['topic']\n",
-    "    orig_dialogue = data[i]['dialogues'][j]['messages']\n",
+    "    print(f\"Augmenting example {i} dialogue {j}\")\n",
+    "    topic = data[i][\"topic\"]\n",
+    "    orig_dialogue = data[i][\"dialogues\"][j][\"messages\"]\n",
     "\n",
-    "    try:         \n",
+    "    try:\n",
     "        aug_dialogue = augment_dialogue(\n",
-    "            orig_dialogue, topic, variations_augmentation_prompt_9, \"gpt-4o-mini-2024-07-18\"\n",
+    "            orig_dialogue,\n",
+    "            topic,\n",
+    "            variations_augmentation_prompt_9,\n",
+    "            \"gpt-4o-mini-2024-07-18\",\n",
     "        )\n",
     "    except Exception as e:\n",
     "        aug_dialogue = e\n",
     "\n",
-    "    data[i]['augmented_dialogues'][j]['messages'] = aug_dialogue"
+    "    data[i][\"augmented_dialogues\"][j][\"messages\"] = aug_dialogue"
    ]
   },
   {
@@ -601,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402_v3\", \"wb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_0-402_v3\", \"wb\") as file:\n",
     "    pickle.dump(data, file)"
    ]
   },
@@ -674,7 +683,7 @@
     }
    ],
    "source": [
-    "data[100]['augmented_dialogues'][20]"
+    "data[100][\"augmented_dialogues\"][20]"
    ]
   },
   {
@@ -695,7 +704,7 @@
     }
    ],
    "source": [
-    "data[216]['augmented_dialogues'][6]"
+    "data[216][\"augmented_dialogues\"][6]"
    ]
   }
  ],
