--- a/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/uttr_vars_error_analysis.ipynb
+++ b/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/uttr_vars_error_analysis.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -40,10 +42,7 @@
     "from tqdm import tqdm\n",
     "import json\n",
     "import pickle\n",
-    "import pandas as pd\n",
-    "from augmentation_utils import (\n",
-    "    check_no_duplicates_one_uttr_list, is_correct_length_modified, match_roles_modified\n",
-    "    )"
+    "import pandas as pd"
    ]
   },
   {
@@ -70,7 +69,7 @@
     }
    ],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402_v3\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_0-402_v3\", \"rb\") as file:\n",
     "    data = pickle.load(file)\n",
     "len(data)"
    ]
@@ -103,11 +102,11 @@
     "normals, exceptions, errors = [], [], []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    augmented_dialogues = example['augmented_dialogues']\n",
+    "    augmented_dialogues = example[\"augmented_dialogues\"]\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
     "        try:\n",
-    "            utterances_lists = [turn['text'] for turn in aug_dia['messages']]\n",
+    "            utterances_lists = [turn[\"text\"] for turn in aug_dia[\"messages\"]]\n",
     "            lens = [len(uttr_list) for uttr_list in utterances_lists]\n",
     "            if len(set(lens)) == 1:\n",
     "                normals.append((i, j))\n",
@@ -117,7 +116,7 @@
     "            all_lens.append(lens)\n",
     "        except Exception as e:\n",
     "            errors.append((i, j, e))\n",
-    "            # errors.append((i, j))     \n",
+    "            # errors.append((i, j))\n",
     "len(errors), len(all_lens), len(normals), len(exceptions)"
    ]
   },
@@ -413,8 +412,8 @@
    "source": [
     "dialogues_total = []\n",
     "for graph in sorted(graphs):\n",
-    "    dialogues_total.append((graph, len(data[graph]['dialogues'])))\n",
-    "tmp = pd.DataFrame(dialogues_total, columns=['graph', 'dialogues_total'])\n",
+    "    dialogues_total.append((graph, len(data[graph][\"dialogues\"])))\n",
+    "tmp = pd.DataFrame(dialogues_total, columns=[\"graph\", \"dialogues_total\"])\n",
     "tmp"
    ]
   },
@@ -665,8 +664,10 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(exceptions, columns=['graph', 'dialogue', 'length_error'])\n",
-    "df.groupby('graph').count().reset_index().join(tmp, rsuffix='_').drop(columns=['graph_'])"
+    "df = pd.DataFrame(exceptions, columns=[\"graph\", \"dialogue\", \"length_error\"])\n",
+    "df.groupby(\"graph\").count().reset_index().join(tmp, rsuffix=\"_\").drop(\n",
+    "    columns=[\"graph_\"]\n",
+    ")"
    ]
   },
   {
@@ -743,7 +744,7 @@
     }
    ],
    "source": [
-    "df.loc[df['graph'] == 57]"
+    "df.loc[df[\"graph\"] == 57]"
    ]
   },
   {
@@ -763,7 +764,7 @@
     }
    ],
    "source": [
-    "df.loc[df['graph'] == 23355]['length_error'].values"
+    "df.loc[df[\"graph\"] == 23355][\"length_error\"].values"
    ]
   },
   {
@@ -811,7 +812,7 @@
     }
    ],
    "source": [
-    "data[37]['dialogues'][2]"
+    "data[37][\"dialogues\"][2]"
    ]
   },
   {
@@ -868,7 +869,7 @@
     }
    ],
    "source": [
-    "data[400]['augmented_dialogues'][1]"
+    "data[400][\"augmented_dialogues\"][1]"
    ]
   },
   {
@@ -905,7 +906,7 @@
     }
    ],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402_v3\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_0-402_v3\", \"rb\") as file:\n",
     "    data = pickle.load(file)\n",
     "len(data)"
    ]
@@ -928,21 +929,34 @@
    ],
    "source": [
     "examples_for_reaugmentation = [\n",
-    "    (57, 0), (57, 6), (57, 7), (57, 8),\n",
+    "    (57, 0),\n",
+    "    (57, 6),\n",
+    "    (57, 7),\n",
+    "    (57, 8),\n",
     "    (67, 15),\n",
-    "    (74, 0), (74, 4),\n",
+    "    (74, 0),\n",
+    "    (74, 4),\n",
     "    (84, 5),\n",
     "    (85, 4),\n",
     "    (100, 10),\n",
     "    (114, 0),\n",
     "    (207, 6),\n",
-    "    (214, 79), (214, 88), (214, 90), (214, 91),\n",
-    "    (221, 22), (221, 24), (221, 27), (221, 32), (221, 33), (221, 34), (221, 35),\n",
+    "    (214, 79),\n",
+    "    (214, 88),\n",
+    "    (214, 90),\n",
+    "    (214, 91),\n",
+    "    (221, 22),\n",
+    "    (221, 24),\n",
+    "    (221, 27),\n",
+    "    (221, 32),\n",
+    "    (221, 33),\n",
+    "    (221, 34),\n",
+    "    (221, 35),\n",
     "    (228, 3),\n",
     "    (230, 5),\n",
     "    (255, 6),\n",
     "    (331, 1),\n",
-    "    (351, 2) \n",
+    "    (351, 2),\n",
     "]\n",
     "len(examples_for_reaugmentation)"
    ]
@@ -989,20 +1003,23 @@
    ],
    "source": [
     "for i, j in examples_for_reaugmentation:\n",
-    "    print(f'Augmenting example {i} dialogue {j}')\n",
-    "    topic = data[i]['topic']\n",
-    "    orig_dialogue = data[i]['dialogues'][j]['messages']\n",
+    "    print(f\"Augmenting example {i} dialogue {j}\")\n",
+    "    topic = data[i][\"topic\"]\n",
+    "    orig_dialogue = data[i][\"dialogues\"][j][\"messages\"]\n",
     "\n",
-    "    try:         \n",
+    "    try:\n",
     "        aug_dialogue = augment_dialogue(\n",
-    "            orig_dialogue, topic, variations_augmentation_prompt_10, \"gpt-4o-mini-2024-07-18\"\n",
+    "            orig_dialogue,\n",
+    "            topic,\n",
+    "            variations_augmentation_prompt_10,\n",
+    "            \"gpt-4o-mini-2024-07-18\",\n",
     "        )\n",
     "    except Exception as e:\n",
     "        aug_dialogue = e\n",
     "\n",
-    "    data[i]['augmented_dialogues'][j]['messages'] = aug_dialogue\n",
+    "    data[i][\"augmented_dialogues\"][j][\"messages\"] = aug_dialogue\n",
     "\n",
-    "with open(f\"../data/gen_dataset_augmented_0-402_v4\", \"wb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_0-402_v4\", \"wb\") as file:\n",
     "    pickle.dump(data, file)"
    ]
   },
@@ -1023,7 +1040,7 @@
     }
    ],
    "source": [
-    "with open(f\"../data/gen_dataset_augmented_0-402_v4\", \"rb\") as file:\n",
+    "with open(\"../data/gen_dataset_augmented_0-402_v4\", \"rb\") as file:\n",
     "    data = pickle.load(file)\n",
     "len(data)"
    ]
@@ -1056,22 +1073,22 @@
     "normals, exceptions, errors = [], [], []\n",
     "\n",
     "for i, example in enumerate(tqdm(data)):\n",
-    "    augmented_dialogues = example['augmented_dialogues']\n",
+    "    augmented_dialogues = example[\"augmented_dialogues\"]\n",
     "\n",
     "    for j, aug_dia in enumerate(augmented_dialogues):\n",
     "        try:\n",
-    "            utterances_lists = [turn['text'] for turn in aug_dia['messages']]\n",
+    "            utterances_lists = [turn[\"text\"] for turn in aug_dia[\"messages\"]]\n",
     "            lens = [len(uttr_list) for uttr_list in utterances_lists]\n",
     "            if len(set(lens)) == 1:\n",
     "                normals.append((i, j))\n",
     "            else:\n",
     "                # exceptions.append((i, j, lens))\n",
-    "                exceptions.append((i, j, aug_dia['id']))\n",
+    "                exceptions.append((i, j, aug_dia[\"id\"]))\n",
     "                # exceptions.append((i, j))\n",
     "            all_lens.append(lens)\n",
     "        except Exception as e:\n",
     "            errors.append((i, j, e))\n",
-    "            # errors.append((i, j))     \n",
+    "            # errors.append((i, j))\n",
     "len(errors), len(all_lens), len(normals), len(exceptions)"
    ]
   },
@@ -1261,8 +1278,8 @@
    "source": [
     "dialogues_total = []\n",
     "for graph in sorted(graphs):\n",
-    "    dialogues_total.append((graph, len(data[graph]['dialogues'])))\n",
-    "tmp = pd.DataFrame(dialogues_total, columns=['graph', 'dialogues_total'])\n",
+    "    dialogues_total.append((graph, len(data[graph][\"dialogues\"])))\n",
+    "tmp = pd.DataFrame(dialogues_total, columns=[\"graph\", \"dialogues_total\"])\n",
     "tmp"
    ]
   },
@@ -1441,8 +1458,10 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(exceptions, columns=['graph', 'dialogue', 'uttr_list_error'])\n",
-    "df.groupby('graph').count().reset_index().join(tmp, rsuffix='_').drop(columns=['graph_'])"
+    "df = pd.DataFrame(exceptions, columns=[\"graph\", \"dialogue\", \"uttr_list_error\"])\n",
+    "df.groupby(\"graph\").count().reset_index().join(tmp, rsuffix=\"_\").drop(\n",
+    "    columns=[\"graph_\"]\n",
+    ")"
    ]
   },
   {
@@ -1498,7 +1517,7 @@
     }
    ],
    "source": [
-    "df.loc[df['graph'] == 53]"
+    "df.loc[df[\"graph\"] == 53]"
    ]
   },
   {
@@ -1518,7 +1537,7 @@
     }
    ],
    "source": [
-    "with open(f\"../data/idx_and_damaged_topics.json\", \"r\") as file:\n",
+    "with open(\"../data/idx_and_damaged_topics.json\", \"r\") as file:\n",
     "    data_to_remove = json.load(file)\n",
     "len(data_to_remove)"
    ]
@@ -1585,7 +1604,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"../data/unstable_augmentation_examples.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"../data/unstable_augmentation_examples.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(exceptions, file, indent=4)"
    ]
   }
