--- a/experiments/exp2025_04_04_pushing_aug_data_to_hub/exp2025_04_04_pushing_aug_data_to_hub/pushing_data_to_hub.ipynb
+++ b/experiments/exp2025_04_04_pushing_aug_data_to_hub/exp2025_04_04_pushing_aug_data_to_hub/pushing_data_to_hub.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -220,7 +222,7 @@
     }
    ],
    "source": [
-    "dataset_loaded['train'][0].keys()"
+    "dataset_loaded[\"train\"][0].keys()"
    ]
   }
  ],
